--- a/source/about.jade
+++ b/source/about.jade
@@ -5,6 +5,7 @@ extend _layout.jade
 block var
   - page = "About"
   - description = "Morganne Borowczyk is a French designer and illustrator"
+  - canonical = "https://morganneborowczyk.design/about.html"
 
 block content
   .id
