--- a/source/home.jade
+++ b/source/home.jade
@@ -5,6 +5,7 @@ extend _layout.jade
 block var
   - page = "Illustration & Design portfolio"
   - description = "Gloomy illustrations made in Lille, France. Merch for bands, CD covers, t-shirts, totebags..."
+  - canonical = "https://morganneborowczyk.design/index.html"
 
 block content
   h1 Illustrator & Designer from Lille, France
