--- a/source/_head.jade
+++ b/source/_head.jade
@@ -12,6 +12,7 @@ head
   meta(name="viewport", content="width=device-width, initial-scale=1.0")
   title Morganne Borowczyk | #{page}
   meta(name="description" content=description)
+  link(rel="canonical" href=canonical)
   
   link(rel="stylesheet", href="assets/style/css/app.css")
   link(href="https://fonts.googleapis.com/css?family=Bitter:400,400i,700" rel="stylesheet")
