--- a/source/about.jade
+++ b/source/about.jade
@@ -4,7 +4,7 @@ extend _layout.jade
 
 block var
   - page = "About"
-  - description = "Morganne Borowczyk is a French designer and illustrator"
+  - description = "Morganne Borowczyk is a French designer and illustrator based in Lille, France."
   - canonical = "https://morganneborowczyk.design/about.html"
 
 block content
