--- a/source/home.jade
+++ b/source/home.jade
@@ -4,7 +4,7 @@ extend _layout.jade
 
 block var
   - page = "Illustration & Design portfolio"
-  - description = "Gloomy illustrations made in Lille, France. Merch for bands, CD covers, t-shirts, totebags..."
+  - description = "Dark illustrations made in Lille, France. Merch for bands, CD covers, t-shirts, totebags..."
   - canonical = "https://morganneborowczyk.design/index.html"
 
 block content
@@ -13,69 +13,71 @@ block content
     .grid-sizer
     .gutter-sizer
     
+    //- (name, id, size, description, source, source2, source3)
+    
     +grid-item("Musée des Arts Décoratifs",
       "project-mad",
       "",
-      "modal-project-mad",
+      "A series of illustrations made with furniture referenced from the archives of the Musée des Arts Décoratifs (Paris).",
       "MAD-2",
       "MAD-1",
       "MAD-3")
     +grid-item("Déjeuner sur l'Herbe",
       "dejeuner",
       "",
-      "modal-dejeuner",
+      "Here's my take on the famous painting Déjeuner sur l'Herbe by Edouard Manet.",
       "dejeuner-sur-lherbe")
-    +grid-item("Toile de Jouy",
+    +grid-item("The Garden of the Witch",
       "toile-de-jouy",
       "",
-      "modal-toile-de-jouy",
+      "A pattern made with a red ballpoint pen, inspired by a French medieval style of tapestry called 'toile de jouy'.",
       "toile-de-jouy")
     +grid-item("Jethro Morris",
       "jethro",
       "",
-      "modal-jethro",
+      "Album artwork for Australian artist Jethro Morris.",
       "jethro-morris__mockup")
     +grid-item("Verminoise",
       "verminoise",
       "",
-      "modal-verminoise",
+      "Album artwork for Verminoise, a local music association.",
       "verminoise__pochette-avant")
     +grid-item("Holispark",
       "holispark",
       "",
-      "modal-holispark",
+      "A few merch items for the band Holispark.",
       "holispark__tshirt__cut-the-rope",
       "holispark__totebags")
     +grid-item("Balmonts",
       "balmonts",
       "",
-      "modal-balmonts",
+      "EP artwork for the Canadian Lo-Fi House duo Balmonts.",
       "balmonts__mockup-front",
       "balmonts__mockup-back")
-    +grid-item("Collaboration with Manchester (UK) artist Doomsnakes",
+    +grid-item("Collaboration with Doomsnakes",
       "doomsnakes",
       "",
-      "modal-doomsnakes",
+      "A collab illustration with Manchester artist Doomsnakes",
       "collab__doomsnakes")
     +grid-item("Vampires from Space",
       "vampires",
       "",
-      "modal-vampires",
+      "Vampires. From Space! Ever heard of them?",
       "vampires-from-space")
     +grid-item("Shadow of A",
       "shadow",
       "",
-      "modal-shadow",
+      "Shadow of A t-shirt (sold out)",
       "shadow-of-a")
     +grid-item("Cave",
       "cave",
       "",
-      "modal-cave",
+      "Inspired by some caves I've visited in 2016. Brush pen on paper",
       "cave")
     +grid-item("One More Time with Feeling",
       "one-more-time",
       "",
-      "modal-one-more-time",
+      "A comission for the editor of One More Time with Feeling, a documentary about Nick Cave and the making of his album Skeleton Tree.",
       "one-more-time-with-feeling__an-act-of-revenge",
       "one-more-time-with-feeling__women-are-like-fucking-3d",
       "one-more-time-with-feeling__girl-in-amber")
