update modals in html

--- a/assets/style/less/layout/grid.less
+++ b/assets/style/less/layout/grid.less
@@ -17,8 +17,14 @@
   .grid-item {
     margin-bottom: 20px;
     min-height: 20px;
-    background-color: @filter-color-smooth;
+    background-color: @pale;
     &.width2 { width: 100%; }
+    &.encart {
+      text-align: center;
+      h3 {
+        color: @font-color;
+      }
+    }
   }
 
   .gutter-sizer { width: 20px; }
