--- a/source/_layout.jade
+++ b/source/_layout.jade
@@ -55,21 +55,28 @@ html(lang="en")
       a.btn.btn-small(href=link)= text
       
     mixin grid-item(name, id, size, description, source, source2, source3)
-      - if (source3)
-        a.grid-item(class=size href="#" data-modal="<div class='modal'><div class='modal-content'><h2>"+name+"</h2><div class='close' title='close'></div><div class='source'><div><img class='lazy' src='assets/images/work/"+source+".jpg' title='"+name+"' alt='"+description+"'></div><div class='gotcha'></div></div><div class='source'><div><img class='lazy' src='assets/images/work/"+source2+".jpg' title='"+name+"' alt='"+description+"'></div><div class='gotcha'></div></div><div class='source'><div><img class='lazy' src='assets/images/work/"+source3+".jpg' title='"+name+"' alt='"+description+"'></div><div class='gotcha'></div></div><p>"+description+"</p></div></div>")
+      a.grid-item(class=size href="#")
           div
-            img.lazy(src="assets/images/work/thumbs/thumb_"+source+".jpg" title=name alt=description)
-          .gotcha    
-      - else if (source2)
-        a.grid-item(class=size href="#" data-modal="<div class='modal'><div class='modal-content'><h2>"+name+"</h2><div class='close' title='close'></div><div class='source'><div><img class='lazy' src='assets/images/work/"+source+".jpg' title='"+name+"' alt='"+description+"'></div><div class='gotcha'></div></div><div class='source'><div><img class='lazy' src='assets/images/work/"+source2+".jpg' title='"+name+"' alt='"+description+"'></div><div class='gotcha'></div></div><p>"+description+"</p></div></div>")
-          div
-            img.lazy(src="assets/images/work/thumbs/thumb_"+source+".jpg" title=name alt=description)
-          .gotcha    
-      - else
-        a.grid-item(class=size href="#" data-modal="<div class='modal'><div class='modal-content'><h2>"+name+"</h2><div class='close' title='close'></div><div class='source'><div><img class='lazy' src='assets/images/work/"+source+".jpg' title='"+name+"' alt='"+description+"'></div><div class='gotcha'></div></div><p>"+description+"</p></div></div>")
-          div
-            img.lazy(src="assets/images/work/thumbs/thumb_"+source+".jpg" title=name alt=description)
-          .gotcha    
+            img(src="assets/images/work/"+source+".jpg" alt=name)
+          .gotcha
+        .modal(id=target)
+            .modal-content
+              h2=name
+              .close
+              .source
+                div
+                  img(src="assets/images/work/"+source+".jpg")
+                .gotcha
+              - if (source2)
+                .source
+                  div
+                    img(src="assets/images/work/"+source2+".jpg")
+                  .gotcha
+              - if (source3)
+                .source
+                  div
+                    img(src="assets/images/work/"+source3+".jpg")
+                  .gotcha
     
     
     include _header.jade
