--- a/source/home.jade
+++ b/source/home.jade
@@ -27,6 +27,10 @@ block content
       "",
       "Here's my take on the famous painting Déjeuner sur l'Herbe by Edouard Manet.",
       "dejeuner-sur-lherbe")
+    .grid-item.encart
+      h3 Like what you see?
+      p
+        a.btn SHop
     +grid-item("The Garden of the Witch",
       "toile-de-jouy",
       "",
@@ -91,7 +95,7 @@ block content
   
   
   script.
-    $('.grid-item').on('click', function(){var modalTarget = $(this).attr('data-modal');$('body').addClass('stuck').append(modalTarget);setTimeout(function(){$('.modal').addClass('visible');},50);});function closeModal() {$('.modal').removeClass('visible');setTimeout(function(){$('.modal').remove();},100);$('body').removeClass('stuck');}$('body').on('click', '.modal .close', function(){console.log('close');closeModal();});$('body').on('click', '.modal', function(event) {console.log('close');if(!$(event.target).closest('.modal-content').length && !$(event.target).is('.modal-content')) {closeModal();}});  
+    $('.grid-item').on('click', function(){var modalTarget = $(this).next('.modal');$(modalTarget).addClass('ready');setTimeout(function(){$(modalTarget).addClass('visible');},50);$('body').addClass('stuck');});function closeModal() {$('.modal').removeClass('visible');setTimeout(function(){$('.modal').removeClass('ready');},100);$('body').removeClass('stuck');}$('.modal .close').on('click', function(){closeModal();});$('.modal').on().click(function (event) {if(!$(event.target).closest('.modal-content').length && !$(event.target).is('.modal-content')) {closeModal();} });
     
   script#mcjs.
     !function(c,h,i,m,p){m=c.createElement(h),p=c.getElementsByTagName(h)[0],m.async=1,m.src=i,p.parentNode.insertBefore(m,p)}(document,"script","https://chimpstatic.com/mcjs-connected/js/users/cfde0b771ac267c40b7657119/14d085ef47b1eb6420cc509cb.js");
