--- a/source/home.jade
+++ b/source/home.jade
@@ -27,10 +27,10 @@ block content
       "",
       "Here's my take on the famous painting Déjeuner sur l'Herbe by Edouard Manet.",
       "dejeuner-sur-lherbe")
-    .grid-item.encart
-      h3 Like what you see?
-      p
-        a.btn SHop
+    //- .grid-item.encart
+    //-   h3 Like what you see?
+    //-   p
+    //-     a.btn SHop
     +grid-item("The Garden of the Witch",
       "toile-de-jouy",
       "",
