--- a/assets/style/less/layout/grid.less
+++ b/assets/style/less/layout/grid.less
@@ -43,14 +43,14 @@
   }
 }
 
-@media screen and (min-width: @screen-m) {
-  .grid {
-    .grid-sizer,
-    .grid-item {
-      width: calc(~"25.3% - 20px");
-      &.width2 {
-        width: calc(~"50% - 10px");
-      }
-    }
-  }
-}
+// @media screen and (min-width: @screen-m) {
+//   .grid {
+//     .grid-sizer,
+//     .grid-item {
+//       width: calc(~"25.3% - 20px");
+//       &.width2 {
+//         width: calc(~"50% - 10px");
+//       }
+//     }
+//   }
+// }
