--- a/source/about.jade
+++ b/source/about.jade
@@ -12,10 +12,15 @@ block content
     .visuel
       h1 Get to know me
     .text
-      p Hi ! My name is Morganne Borowczyk. I am a design student at ECV Lille (France).
-      p Before going back to school, I was a webdesigner at Wexperience, a web agency in Roubaix focused on UX design. My work there consisted of many things, including wireframing, front-end development, AB testing, analyzing focus groups and user testing.
-      p This year I've decided to dedicate myself to learning again and to focus on developing my creativity. Drawing has always been a big part of my life and I am very happy to be able to focus on more illustrated projects.
-      p I've been doing a lot of work for bands of many styles! Rock, Folk, House music, it's always a pleasure to work with artists.
-      p.cta
-        | If you wish to make a commission please feel free to get in touch!
-        +btn-large("Hire me","mailto:hello@morganneborowczyk.design")
+      p Bonjour ! Je m'appelle Morganne et je suis étudiante en troisième année de design à l'ECV de Lille. J'y apprends tous les jours à créer des <strong>identités visuelles</strong>, réaliser des <strong>illustrations</strong> et mettre en page de jolies <strong>éditions</strong>.
+      p Avant de reprendre les études, j'étais web designer chez <a href="www.wexperience.fr" rel="nofollow">Wexperience</a>—une bien belle agence web orientée UX se trouvant à Roubaix. J'y ai fait du wireframing, de l'intégration HTML/CSS/JS, du test AB et de l'analyse de tests utilisateurs.
+      p Ces trois ans là-bas m'ont donné le souci du détail et l'amour des choses bien carrées.
+      
+    //- .text
+    //-   p Hi ! My name is Morganne Borowczyk. I am a design student at ECV Lille (France).
+    //-   p Before going back to school, I was a webdesigner at Wexperience, a web agency in Roubaix focused on UX design. My work there consisted of many things, including wireframing, front-end development, AB testing, analyzing focus groups and user testing.
+    //-   p This year I've decided to dedicate myself to learning again and to focus on developing my creativity. Drawing has always been a big part of my life and I am very happy to be able to focus on more illustrated projects.
+    //-   p I've been doing a lot of work for bands of many styles! Rock, Folk, House music, it's always a pleasure to work with artists.
+    //-   p.cta
+    //-     | If you wish to make a commission please feel free to get in touch!
+    //-     +btn-large("Hire me","mailto:hello@morganneborowczyk.design")
