--- a/assets/style/less/layout/fonts.less
+++ b/assets/style/less/layout/fonts.less
@@ -1,51 +1,52 @@
 //main: ../app.less
 
-@font-face {
-  font-family: 'bluu';
-  src: url('../../fonts/bluunext-bold-webfont.woff2') format('woff2'),
-  url('../../fonts/bluunext-bold-webfont.woff') format('woff'),
-  url('../../fonts/bluunext-bold.ttf') format('truetype'),
-  url('../../fonts/bluunext-bold-webfont.svg#bluu_nextbold') format('svg');
-  font-weight: normal;
-  font-style: normal;
+// @font-face {
+//   font-family: 'bluu';
+//   src: url('../../fonts/bluunext-bold-webfont.woff2') format('woff2'),
+//   url('../../fonts/bluunext-bold-webfont.woff') format('woff'),
+//   url('../../fonts/bluunext-bold.ttf') format('truetype'),
+//   url('../../fonts/bluunext-bold-webfont.svg#bluu_nextbold') format('svg');
+//   font-weight: normal;
+//   font-style: normal;
+//
+// }
+//
+// @font-face {
+//   font-family: 'bluu';
+//   src: url('../../fonts/bluunext-bolditalic-webfont.woff2') format('woff2'),
+//   url('../../fonts/bluunext-bolditalic-webfont.woff') format('woff'),
+//   url('../../fonts/bluunext-bolditalic.ttf') format('truetype'),
+//   url('../../fonts/bluunext-bolditalic-webfont.svg#bluu_nextbold_italic') format('svg');
+//   font-weight: normal;
+//   font-style: italic;
+//
+// }
 
-}
-
-@font-face {
-  font-family: 'bluu';
-  src: url('../../fonts/bluunext-bolditalic-webfont.woff2') format('woff2'),
-  url('../../fonts/bluunext-bolditalic-webfont.woff') format('woff'),
-  url('../../fonts/bluunext-bolditalic.ttf') format('truetype'),
-  url('../../fonts/bluunext-bolditalic-webfont.svg#bluu_nextbold_italic') format('svg');
-  font-weight: normal;
-  font-style: italic;
-
-}
-
-@font: 'bluu', serif;
+// @font: 'bluu', serif;
+@font: base-mono-wide, monospace;
+@font-title: hwt-tuscan-extended, sans-serif;
 
 body {
   font-family: @font;
-  font-size: 20px;
+  font-size: 16px;
   line-height: 1.5;
 }
 h1, .h1,
+h2, .h2,
 h3, .h3,
 h4, .h4,
 h5, .h5,
 h6, .h6 {
-  font-style: italic;
-  font-weight: @bold;
+  font-weight: normal;
 }
 
 h1, .h1 {
-  font-size: 24px;
-  letter-spacing: 3px;
+  font-size: 28px;
   text-align: center;
   margin: 0 0 20px;
+  font-family: @font-title;
+  font-weight: normal;
   @media screen and (min-width: @screen-m) {
-    font-size: 30px;
-    letter-spacing: 5px;
     margin: 0 0 50px;
   }
 }
