--- a/assets/style/less/layout/header.less
+++ b/assets/style/less/layout/header.less
@@ -12,11 +12,9 @@ header {
   .brand {
     text-decoration: none;
     color: @font-color;
-    font-weight: @bold;
     display: block;
     padding: 15px 0 20px;
     text-align: left;
-    font-style: italic;
     transition: all .3s @ease;
     margin-right: 50px;
   }
@@ -82,7 +80,7 @@ header {
       list-style: none;
       text-align: center;
       padding: 50px 20px 0;
-      font-style: italic;
+      font-family: @font-title;
       font-size: 28px;
       margin: 0;
       li {
