--- a/assets/style/less/layout/id.less
+++ b/assets/style/less/layout/id.less
@@ -22,9 +22,9 @@
       color: @background-color;
       display: block;
       margin: 10px 0 0;
-      font-size: 24px;
-      line-height: 33px;
-      letter-spacing: 10px;
+      font-size: 80px;
+      line-height: 0.8em;
+      letter-spacing: 0;
     }
   }
   @media screen and (min-width: @screen-s) {
