--- a/assets/style/less/layout/theme.less
+++ b/assets/style/less/layout/theme.less
@@ -22,28 +22,42 @@ h5, .h5,
 h6, .h6 {
   color: @accent-color;
 }
+.block-title {
+  text-align: center;
+  h1 {
+    margin-bottom: 0;
+  }
+  h3 {
+    color: @muted-font-color;
+    margin: 0 0 20px;
+    @media screen and (min-width: @screen-m) {
+      margin: 0 0 50px;
+    }
+  }
+}
 a {
   color: @muted-font-color;
 }
 .btn {
-  background-color: @accent-color;
-  color: @background-color;
   text-decoration: none;
   text-align: center;
   display: block;
+  font-family: @font-title;
+  text-transform: uppercase;
+  font-size: 14px;
+  padding: 10px 30px;
+  letter-spacing: 5px;
   @media screen and (min-width: @screen-xs) {
     display: inline-block;
   }
   &.btn-small {
-    font-size: 14px;
-    padding: 10px 30px;
-    letter-spacing: 5px;
+    background-color: transparent;
+    color: @accent-color;
+    border: 2px solid @accent-color;
   }
   &.btn-large {
-    font-size: 20px;
-    padding: 15px 40px;
-    letter-spacing: 8px;
-    text-transform: uppercase;
+    background-color: @accent-color;
+    color: @background-color;
   }
 }
 .container {
@@ -55,10 +69,18 @@ a {
   }
 }
 p {
-  font-style: italic;
+  strong {
+    font-family: @font-title;
+    font-size: 0.85em;
+    color: @accent-color;
+  }
+  a {
+    font-family: @font-title;
+    font-size: 0.85em;
+    color: @font-color;
+  }
   &.cta {
     color: @font-color;
-    font-style: normal;
     margin: 50px 0 30px;
     text-align: center;
     padding-left: 20px;
