--- a/source/_head.jade
+++ b/source/_head.jade
@@ -15,7 +15,8 @@ head
   link(rel="canonical" href=canonical)
   
   link(rel="stylesheet", href="assets/style/css/app.css")
-  link(href="https://fonts.googleapis.com/css?family=Bitter:400,400i,700" rel="stylesheet")
+  //- link(href="https://fonts.googleapis.com/css?family=Bitter:400,400i,700" rel="stylesheet")
+  link(rel="stylesheet" href="https://use.typekit.net/iow5ziv.css")
   
   script(src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js")
   
