--- a/assets/style/less/app.less
+++ b/assets/style/less/app.less
@@ -6,6 +6,7 @@
 @import "layout/theme";
 @import "layout/header";
 @import "layout/footer";
+@import "layout/tri";
 @import "layout/grid";
 @import "layout/id";
 @import "layout/modal";
